syntax = "proto3";

option csharp_namespace = "LibrarySystem.gRpcBooks";

package book;

service BookService {
  rpc GetMostBorrowedBooks (Empty) returns (BooksResponse);
  rpc GetReadingPace (ReadingPaceRequest) returns (ReadingPaceResponse);
  rpc GetAllBooks (Empty) returns (BooksResponse);
}

message Empty {}
message Book {
  int32 Id = 1;
  string Title = 2;
  string Author = 3;
  int32 Pages = 4;
}
message BooksResponse { repeated Book Books = 1; }
message ReadingPaceRequest { int32 UserId = 1; int32 BookId = 2; }
message ReadingPaceResponse { double Pace = 1; }
